--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+<img src="./img/IMG_logo_(2017).svg" alt="">
   <h1>NEWS</h1>
   <h2>lesson</h2>
 </body>
